gccida/c2/regmove_optimize
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1561:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1567:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1567:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1568:4: error: expected ';' after expression
rtx v54; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1568:5: error: use of undeclared identifier 'v54'
rtx v54; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1576:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1576:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1578:4: error: expected ';' after expression
rtx v64; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1578:5: error: use of undeclared identifier 'v64'
rtx v64; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1595:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1595:5: error: use of undeclared identifier 'v81'
rtx v81; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1596:4: error: expected ';' after expression
rtx real_insn; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1596:5: error: use of undeclared identifier 'real_insn'; did you mean 'next_insn'?
rtx real_insn; // rbx 
    ^~~~~~~~~
    next_insn
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/rtl.h:1347:12: note: 'next_insn' declared here
extern rtx next_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1598:4: error: expected ';' after expression
rtx v84; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1598:5: error: use of undeclared identifier 'v84'
rtx v84; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1601:6: error: use of undeclared identifier 'v87'
rtx *v87; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1606:4: error: expected ';' after expression
rtx v92; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1606:5: error: use of undeclared identifier 'v92'
rtx v92; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/regmove.c:1607:4: error: expected ';' after expression
rtx v93; // rbx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regmove_optimize/src/obj/regmove.o] Error 1
